# mini-twitter

./: .gitignore  Cargo.toml  README.MD  docker-compose.yml
migrations/: 20250809142806_initial_schema.sql
src/: main.rs
src/handlers/: handler.rs
src/invites/: mod.rs
src/models/: comments.rs  mod.rs  post.rs  user.rs
src/repository/: mod.rs  post.rs  user.rs
