[package]
name = "site-message"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = "1.45.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
